--- a/client/templates/Navbar.html
+++ b/client/templates/Navbar.html
@@ -15,10 +15,10 @@
         {{#if currentUser}}
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
-              <li><button class="btn" data-modal="modalStartKillerLeague" id="buttonStartKillerLeague">Start a league</button></li>
-              <li><button class="btn" data-modal="modalJoinKillerLeague" id="buttonJoinKillerLeague">Join a league</button></li>
-              <li><button class="btn" data-modal="modalKillerRules" id="buttonKillerRules">Rules</button></li>
-              <li><button class="btn" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
+              <li><button class="btn modalButton" data-modal="modalStartKillerLeague" id="buttonStartKillerLeague">Start a league</button></li>
+              <li><button class="btn modalButton" data-modal="modalJoinKillerLeague" id="buttonJoinKillerLeague">Join a league</button></li>
+              <li><button class="btn modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Rules</button></li>
+              <li><button class="btn modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
