--- a/client/templates/modals/LoginForm.html
+++ b/client/templates/modals/LoginForm.html
@@ -1,13 +1,13 @@
 <template name="LoginForm">
   <div id="LoginForm">
-    <div class="modal fade">
+    <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="Login form">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
-          <div id="login" class="form-signin">
-              {{> atForm}}
+            <div id="login" class="form-signin">
+                {{> atForm}}
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </div>
