--- a/client/templates/Navbar.html
+++ b/client/templates/Navbar.html
@@ -30,7 +30,7 @@
         {{else}}
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li>{{>atNavButton}}</li>
+            <li><button class="btn modalButton" data-modal="modalLoginForm">Log in</button></li>
           </ul>
         </div>
         {{/if}}
