--- a/client/templates/SignUpLogIn.html
+++ b/client/templates/SignUpLogIn.html
@@ -1,6 +1,8 @@
 <template name="SignUpLogIn">
   <div id="SignUpLogIn">
     {{> Navbar}}
-    {{> atForm}}
+    {{> KillerExplanation}}
+    {{> KillerEntry}}
+    {{> KillerFooter}}
   </div>
 </template>
