--- a/client/templates/modals/SignupForm.html
+++ b/client/templates/modals/SignupForm.html
@@ -1,15 +1,15 @@
-<template name="LoginForm">
-  <div id="LoginForm">
-    <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="Login form">
+<template name="SignupForm">
+  <div id="SignupForm">
+    <div class="modal fade" id="modalSignupForm" tabindex="-1" role="dialog" aria-labelledby="Signup form">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="loginLabel">Log in</h4>
+            <h4 class="modal-title" id="signupLabel">Sign up</h4>
           </div>
           <div class="modal-body">
-            <div class="form-signin">
-                {{> atForm}}
+            <div class="form-signup">
+                {{> atForm state='signUp'}}
             </div>
           </div>
         </div>
