cchange email skeleton complete

--- a/client/templates/modals/ChangeEmailForm.html
+++ b/client/templates/modals/ChangeEmailForm.html
@@ -20,9 +20,9 @@
               <li>
                 <form id="enterNewEmailForm">
                   <label for="newEmail1">New email</label>
-                  <input type="email" name="newEmail1" placeholder="New email">
+                  <input type="email" name="newEmail1" placeholder="New email" required>
                   <label for="newEmail2">Confirm new email</label>
-                  <input type="email" name="newEmail2" placeholder="Confirm new email">
+                  <input type="email" name="newEmail2" placeholder="Confirm new email" required>
                   <button id="updateEmailButton">Apply changes</button>
                 </form>
               </li>
