--- a/client/templates/modals/ChangeEmailForm.html
+++ b/client/templates/modals/ChangeEmailForm.html
@@ -16,41 +16,21 @@
               You can change the email address registered with your account below, but please be careful - if you don't enter a working email address there will be no way of recovering your account if you forget your password.
             </p>
             <p>
-              Your registered emails are currently:
+              Your {{#if loggedInUserEmail.verified}}verified{{else}}registered{{/if}} address is: {{loggedInUserEmail.address}}
             </p>
-            <table>
-              <thead>
-                <tr>
-                  <th>Address</th>
-                  <th>Status</th>
-                  <th>Actions</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#each emailsArray}}
-                  <tr>
-                    <td>{{address}}</td>
-                    <td>
-                      {{#if verified}}
-                        Verified
-                      {{else}}
-                        <button>Send verification email</button>
-                        <br>
-                        (Needed for real money games)
-                      {{/if}}
-                    </td>
-                    <td>
-                      <button {{multiEmails}}>Remove</button>
-                    </td>
-                  </tr>
-                {{/each}}
-              </tbody>
-            </table>
+
+            {{#unless loggedInUserEmail.verified}}
+              <p>
+                Your email address is currently unverified. You must verify your address if you want to join real money leagues so we can contact you when you win.
+              </p>
+              <button class="sendVerificationEmailButton">Send verification email</button>
+            {{/unless}}
             <br>
             <form id="enterNewEmailForm">
               <p>Add a new email</p>
               <label for="newEmail1">New email</label>
               <input type="email" name="newEmail1" placeholder="New email" required>
+              <br>
               <label for="newEmail2">Confirm new email</label>
               <input type="email" name="newEmail2" placeholder="Confirm new email" required>
               <button id="updateEmailButton">Submit</button>
