--- a/client/templates/leagues/KillerAliveLeagues.html
+++ b/client/templates/leagues/KillerAliveLeagues.html
@@ -5,7 +5,7 @@
         <thead>
           <tr>
             <th>League name</th>
-            <th>Pick for gameweek {{currentGameweekDateFormatted}}</th>
+            <th>Pick for gameweek {{gameWeekDateFormatted currentGameWeek}}</th>
             <th>Details</th>
           </tr>
         </thead>
