--- a/client/templates/bits/KillerChoiceWidget.html
+++ b/client/templates/bits/KillerChoiceWidget.html
@@ -1,12 +1,14 @@
 <template name="KillerChoiceWidget">
-  <form>
-    <span>Pick a team</span>
-    <select class="teamsLeftDropDown" name="">
-      <option selected="true">Pick this week's team</option>
-      {{#each teamsLeft}}
-        <option value={{.}}>{{.}}</option>
-      {{/each}}
-    </select>
-    <input type="submit" name="killerChoiceButton" value="Submit">
-  </form>
+  <div id="KillerChoiceWidget">
+    <form class="killerChoiceForm">
+      <span>Pick a team</span>
+      <select class="teamsLeftDropDown" name="">
+        <option selected="true">Pick this week's team</option>
+        {{#each teamsLeft}}
+          <option value={{.}}>{{.}}</option>
+        {{/each}}
+      </select>
+      <input type="submit" name="killerChoiceButton" value="Submit">
+    </form>
+  </div>
 </template>
