user can now repick

--- a/client/templates/leagues/KillerAliveLeagues.html
+++ b/client/templates/leagues/KillerAliveLeagues.html
@@ -13,7 +13,7 @@
           {{#each userAliveLeaguesList}}
             <tr>
               <td>{{leagueName}}</td>
-              <td>{{> PickTeamOrPickedTeam}}</td>
+              <td>{{> KillerChoiceWidget}}</td>
               <td>{{> MiniActiveLeagueDetails}}</td>
             </tr>
           {{/each}}
