--- a/client/templates/bits/PickTeamOrPickedTeam.html
+++ b/client/templates/bits/PickTeamOrPickedTeam.html
@@ -4,7 +4,16 @@
       <span>You picked: {{chosenTeamName}}</span>
       <button type="button" id="REPICK{{this._id}}">Change your pick</button>
     {{else}}
-      {{> KillerChoiceWidget}}
+      <form class="killerChoiceForm">
+        <span>Pick a team</span>
+        <select class="teamsLeftDropDown" id="DD{{this._id}}">
+          <option selected="true" disabled>Pick this week's team</option>
+          {{#each teamsLeft}}
+            <option value={{.}}>{{.}}</option>
+          {{/each}}
+        </select>
+        <input type="submit" name="killerChoiceButton" value="Submit">
+      </form>
     {{/if}}
   </div>
 </template>
