--- a/client/templates/modals/FullActiveLeagueDetails.html
+++ b/client/templates/modals/FullActiveLeagueDetails.html
@@ -12,7 +12,25 @@
   				</div>
 
   				<div class="modal-body">
-            {{this }}
+            <ul>
+              <li>League name: {{leagueName}}</li>
+              <li>League chairman: </li>
+              <li>The first round of games for this league is on {{gameWeekDateFormatted dateStarting}}</li>
+              <li>The league entry code is <span>{{_id}}</span>. Click <a href="#">here</a> to send it in an email to your friends</li>
+              {{#if entryFee}}
+                <li>Prize pool so far: £</li>
+              {{else}}
+                <li>Free game - no prize pool</li>
+              {{/if}}
+            </ul>
+            <p>
+              The following players have already joined this league:
+            </p>
+            <ul>
+              {{#each members}}
+                <li>{{playerId}}</li>
+              {{/each}}
+            </ul>
           </div>
 
           <div class="modal-footer">
