updated modal tabindices

--- a/app/client/templates/modals/FullActiveLeagueDetails.html
+++ b/app/client/templates/modals/FullActiveLeagueDetails.html
@@ -1,6 +1,6 @@
 <template name="FullActiveLeagueDetails">
   <div id="FullActiveLeagueDetails">
-    <div class="modal fade" role="dialog">
+    <div class="modal fade" role="dialog" tabindex="-1">
   		<div class="modal-dialog">
   			<div class="modal-content">
 
