--- a/app/client/templates/modals/JoinKillerLeague.html
+++ b/app/client/templates/modals/JoinKillerLeague.html
@@ -1,6 +1,6 @@
 <template name="JoinKillerLeague">
   <div id="JoinKillerLeague">
-    <div class="modal fade" role="dialog">
+    <div class="modal fade" role="dialog" tabindex="-1">
   		<div class="modal-dialog">
   			<div class="modal-content">
 
