--- a/app/client/templates/modals/ChangeEmailForm.html
+++ b/app/client/templates/modals/ChangeEmailForm.html
@@ -1,6 +1,6 @@
 <template name="ChangeEmailForm">
   <div id="ChangeEmailForm">
-    <div class="modal fade" role="dialog">
+    <div class="modal fade" role="dialog" tabindex="-1">
   		<div class="modal-dialog">
   			<div class="modal-content">
 
