reduced all to one life

--- a/app/client/templates/leagues/MiniActiveLeagueDetails.html
+++ b/app/client/templates/leagues/MiniActiveLeagueDetails.html
@@ -1,9 +1,8 @@
 <template name="MiniActiveLeagueDetails">
   <div id="MiniActiveLeagueDetails">
-    <!-- TODO: change to just start date and prize pool if not started -->
+    <!-- TODO: change to just start date if not started -->
     <ul>
       <li>Round: {{round}}</li>
-      <li>Lives left: {{livesLeft}}</li>
       <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
     </ul>
   </div>
