corrected newtab to blank

--- a/app/client/templates/modals/KillerRules.html
+++ b/app/client/templates/modals/KillerRules.html
@@ -27,8 +27,8 @@
               <li>If significant numbers of Premier League games are called off for any reason, Killer will suspend itself for that week. Otherwise, it's every player's responsibility to pick a team they know will play that week</li>
               <li>Late entries (i.e. after a league's matches have started) are not possible</li>
               <li>Players will only be able to see their leaguemates' weekly picks after the week's deadline has passed</li>
-              <li>Any disputes will be decided unilaterally by <a href="mailto:chairman@killer.football?subject=Feedback" target="newtab">the creator of Killer</a>. Be warned: he has no time for shenanigans - no time</li>
-              <li>All feedback is welcome, especially during the beta phase in August. <a href="mailto:chairman@killer.football?subject=Feedback" target="newtab">chairman@killer.football</a></li>
+              <li>Any disputes will be decided unilaterally by <a href="mailto:chairman@killer.football?subject=Feedback" target="_blank">the creator of Killer</a>. Be warned: he has no time for shenanigans - no time</li>
+              <li>All feedback is welcome, especially during the beta phase in August. <a href="mailto:chairman@killer.football?subject=Feedback" target="_blank">chairman@killer.football</a></li>
               <li>Killer was created by Alex Rubner using Meteor. Original artwork (coming soon) by Electric Bugle</li>
             </ul>
           </div>
