removed shite FB package, added SDK myself. Simples.

--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -61,6 +61,9 @@
                     <li>Use the sharing links below</li>
                     <li>Send them your unique league code however you like: {{newLeagueCode}}</li>
                   </ul>
+                  <ul>
+                    <li><a id="facebookShare" class="btn btn-default btn-sm" href="#"><i class="fa fa-facebook-square"></i>Share</a></li>
+                  </ul>
                 </div>
               {{/if}}
             {{/autoForm}}
