--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -87,8 +87,8 @@
         <li>Send them your unique league code however you like </li>
       </ul>
       <ul>
-        <li><a id="facebookNewLeagueShare" class="btn btn-default btn-lg" href="#"><i class="fa fa-facebook-square"></i> Share</a></li>
-        <li><div id="tw" class=""></div></li>
+        <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{newLeagueCode}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
       </ul>
     </div>
   </div>
