--- a/app/client/templates/modals/JoinKillerLeague.html
+++ b/app/client/templates/modals/JoinKillerLeague.html
@@ -22,19 +22,18 @@
               </div>
               <button type="submit" class="btn btn-primary" id="submitLeagueCodeButton">Submit</button>
             </div>
-            {{#if showLeaguePreview}}
-            <div id="leaguePreviewBeforeJoining">
-              <p>
-                Please review the details below and then hit confirm. If you have any questions, please email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>
-              </p>
-              <ul>
-                <li>You are joining a league called {{leaguePreviewDetails.leagueName}}</li>
-                <li>The first round of games for this league is played on {{leaguePreviewDetails.dateStarting}}</li>
-                <li>The chairman of this league is <!-- TODO: insert name --> </li>
-              </ul>
-              <button type="submit" class="btn btn-primary" id="confirmJoinLeagueButton">Confirm</button>
-            </div>
-          {{/if}}
+
+            {{#if equals displayControlJoin "preview"}}
+              {{#with leaguePreviewDetails}}
+                {{> JoinLeaguePreview}}
+              {{/with}}
+            {{/if}}
+
+            {{#if equals displayControlJoin "success"}}
+              {{#with leaguePreviewDetails}}
+                {{> JoinLeagueSuccess}}
+              {{/with}}
+            {{/if}}
           </div>
 
           <div class="modal-footer">
@@ -43,6 +42,42 @@
 
         </div>
       </div>
+    </div>
+  </div>
+</template>
+
+<template name="JoinLeaguePreview">
+  <div id="JoinLeaguePreview">
+    <p>
+      Please review the details below and then hit confirm. If you have any questions, please email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>
+    </p>
+    <ul>
+      <li>You are joining a league called {{leagueName}}</li>
+      <li>The first round of games for this league is played on {{dateStarting}}</li>
+      <li>The chairman of this league is {{chairmanName}} </li>
+    </ul>
+    <button type="submit" class="btn btn-primary" id="confirmJoinLeagueButton">Confirm</button>
+  </div>
+</template>
+
+<template name="JoinLeagueSuccess">
+  <div id="JoinLeagueSuccess">
+    <h3>Success!</h3>
+    <!-- TODO: add deadline for games AND league code to mailto/twtt -->
+    <p>
+      You have successfully joined {{leagueName}} - good luck!
+    </p>
+    <div>
+      <ul>
+        <li>Click here to open an email pre-filled with all the details</li>
+        <li>Use the sharing links below</li>
+        <li>Send them your unique league code however you like </li>
+      </ul>
+      <ul>
+        <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
+        <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
+      </ul>
     </div>
   </div>
 </template>
