moved FB click to body events by adding class rather than id to button, and added sharing to detailed modal

--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -86,9 +86,9 @@
         <li>Use the sharing links below</li>
         <li>Send them your unique league code however you like </li>
       </ul>
-      <ul>
+      <ul class="sharingButtonsList">
         <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{newLeagueCode}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
-        <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
+        <li><a class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
         <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
       </ul>
     </div>
