--- a/app/client/templates/modals/FullActiveLeagueDetails.html
+++ b/app/client/templates/modals/FullActiveLeagueDetails.html
@@ -32,6 +32,7 @@
               </p>
               <ul>
                 {{#each members}}
+                <!-- TODO: Surely this is just "fullName"??  -->
                   <li>{{memberName}}</li>
                 {{/each}}
               </ul>
