added autopick function and deadline route

--- a/app/client/templates/bits/KillerGameweekMatches.html
+++ b/app/client/templates/bits/KillerGameweekMatches.html
@@ -8,10 +8,8 @@
         {{#each listOfCurrentMatches}}
           <td>
             <span>{{home}}</span>
-            <br>
+            <br><span>v</span>
             <span>{{away}}</span>
-            <br>
-            <span>{{gameWeekDateFormatted time}}</span>
           </td>
         {{/each}}
         </tr>
